Main content in - coming along nicely

--- a/index.html
+++ b/index.html
@@ -15,9 +15,47 @@
     </nav>
   </header>
 
-  <body>
+<!-- Hero Image and Text -->
 
-    <h1> lorem ipsum blah blah blah</h1>
+  <body>
+      <div class="hero" id="mission">
+        <div class ="hero-text">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+    </div>
+
+<!-- Body and Content -->
+
+
+    <div class="content" id="featured">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at the Tea Cozy?</h4>
+      <div class="tea-month">
+        <div class="tea-box">
+          <img src="./resources/images/img-berryblitz.jpg">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="tea-box">
+          <img src="./resources/images/img-spiced-rum.jpg">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="tea-box">
+          <img src="./resources/images/img-berryblitz.jpg">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="tea-box">
+          <img src="./resources/images/img-spiced-rum.jpg">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="tea-box">
+          <img src="./resources/images/img-berryblitz.jpg">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+    </div>
+
     <p> lorem ipsum blah blah blah</p>
     <p> lorem ipsum blah blah blah</p>
     <p> lorem ipsum blah blah blah</p>
