--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
     <div class="content" id="featured">
+
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at the Tea Cozy?</h4>
       <div class="tea-month">
@@ -42,43 +43,58 @@
           <h4>Spiced Rum Tea</h4>
         </div>
         <div class="tea-box">
-          <img src="./resources/images/img-berryblitz.jpg">
+          <img src="./resources/images/img-donut.jpg">
           <h4>Seasonal Donuts</h4>
         </div>
         <div class="tea-box">
-          <img src="./resources/images/img-spiced-rum.jpg">
+          <img src="./resources/images/img-myrtle-ave.jpg">
           <h4>Myrtle Ave Tea</h4>
         </div>
         <div class="tea-box">
-          <img src="./resources/images/img-berryblitz.jpg">
+          <img src="./resources/images/img-bedford-bizarre.jpg">
           <h4>Bedford Bizarre Tea</h4>
         </div>
       </div>
     </div>
 
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <h2> lorem ipsum blah blah blah</h2>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
-    <p> lorem ipsum blah blah blah</p>
+    <div class="locations" id="locations">
+      <h2>Locations</h2>
+      <div class="sites">
+        <div class="site">
+          <h3>Downtown</h3>
+          <p>384 West 4th</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="site">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="site">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+
+<!-- Contact info -->
+
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+      <h5><a href="tel:917-555-8904">917-555-8904</a></h5>
+    </div>
+
+<!-- Footer -->
+
+    <div class="footer">
+      <h5>copyright The Tea Cozy 2017</h5>
+    </div>
+
   </body>
 </html>
 <!-- because we're inevitably one commit behind -->
